cmake-build-all.yml: Atualizado checkout do repositorio.

--- a/.github/workflows/cmake-build-all.yml
+++ b/.github/workflows/cmake-build-all.yml
@@ -14,43 +14,55 @@ jobs:
         runs-on: ubuntu-latest
 
         steps:
-        - uses: actions/checkout@v3
+          - name: Checkout the repo
+            uses: actions/checkout@v3
+            with:
+              persist-credentials: false
+              ref: ${{ github.event.inputs.checkoutRef }}
 
-        - name: Set up CMake
-          uses: actions/setup-cmake@v2
-          with:
-            cmake-version: '3.20.0'
+          - name: Set up CMake
+            uses: actions/setup-cmake@v2
+            with:
+              cmake-version: '3.20.0'
 
-        - name: Build on Linux
-          run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
+          - name: Build on Linux
+            run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
 
     build_windows:
         runs-on: windows-latest
 
         steps:
-        - uses: actions/checkout@v3
+          - name: Checkout the repo
+            uses: actions/checkout@v3
+            with:
+              persist-credentials: false
+              ref: ${{ github.event.inputs.checkoutRef }}
 
-        - name: Set up CMake
-          uses: actions/setup-cmake@v2
-          with:
-            cmake-version: '3.20.0'
+          - name: Set up CMake
+            uses: actions/setup-cmake@v2
+            with:
+              cmake-version: '3.20.0'
 
-        - name: Build on Windows
-          run: cmake -B build_windows -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
+          - name: Build on Windows
+            run: cmake -B build_windows -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
 
     build_macos:
         runs-on: macos-latest
 
         steps:
-        - uses: actions/checkout@v3
+          - name: Checkout the repo
+            uses: actions/checkout@v3
+            with:
+              persist-credentials: false
+              ref: ${{ github.event.inputs.checkoutRef }}
 
-        - name: Set up CMake
-          uses: actions/setup-cmake@v2
-          with:
-            cmake-version: '3.20.0'
+          - name: Set up CMake
+            uses: actions/setup-cmake@v2
+            with:
+              cmake-version: '3.20.0'
 
-        - name: Build on MacOS
-          run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
+          - name: Build on MacOS
+            run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
 
     export_artifacts:
         runs-on: ubuntu-latest
