--- a/.github/workflows/cmake-build-all.yml
+++ b/.github/workflows/cmake-build-all.yml
@@ -21,7 +21,7 @@ jobs:
               ref: ${{ github.event.inputs.checkoutRef }}
 
           - name: Build on Linux
-            run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
+            run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build_linux --config ${BUILD_TYPE}
 
     build_windows:
         runs-on: windows-latest
@@ -34,7 +34,7 @@ jobs:
               ref: ${{ github.event.inputs.checkoutRef }}
 
           - name: Build on Windows
-            run: cmake -B build_windows -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
+            run: cmake -B build_windows -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build_windows --config ${BUILD_TYPE}
 
     build_macos:
         runs-on: macos-latest
@@ -47,7 +47,7 @@ jobs:
               ref: ${{ github.event.inputs.checkoutRef }}
 
           - name: Build on MacOS
-            run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build --config ${BUILD_TYPE}
+            run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build_macos --config ${BUILD_TYPE}
 
     export_artifacts:
         runs-on: ubuntu-latest
