--- a/.github/workflows/cmake-build-all.yml
+++ b/.github/workflows/cmake-build-all.yml
@@ -20,8 +20,14 @@ jobs:
               persist-credentials: false
               ref: ${{ github.event.inputs.checkoutRef }}
 
-          - name: Build on Linux
-            run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build_linux --config ${BUILD_TYPE}
+          - name: Configure CMake
+            run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+
+          - name: Build project
+            run: cmake --build build_linux --config ${BUILD_TYPE}
+
+          - name: Move artifacts to build folder
+            run: mv build_linux/* build
 
     build_windows:
         runs-on: windows-latest
@@ -33,8 +39,17 @@ jobs:
               persist-credentials: false
               ref: ${{ github.event.inputs.checkoutRef }}
 
-          - name: Build on Windows
-            run: cmake -B build_windows -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build_windows --config ${BUILD_TYPE}
+          - name: Set up CMake
+            uses: microsoft/setup-msbuild@v1
+
+          - name: Configure CMake
+            run: cmake -B build_windows -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+
+          - name: Build project
+            run: cmake --build build_windows --config ${BUILD_TYPE}
+
+          - name: Move artifacts to build folder
+            run: mv build_windows/* build
 
     build_macos:
         runs-on: macos-latest
@@ -46,8 +61,14 @@ jobs:
               persist-credentials: false
               ref: ${{ github.event.inputs.checkoutRef }}
 
-          - name: Build on MacOS
-            run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE} && cmake --build build_macos --config ${BUILD_TYPE}
+          - name: Configure CMake
+            run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+
+          - name: Build project
+            run: cmake --build build_macos --config ${BUILD_TYPE}
+
+          - name: Move artifacts to build folder
+            run: mv build_macos/* build
 
     export_artifacts:
         runs-on: ubuntu-latest
@@ -55,15 +76,8 @@ jobs:
         needs: [build_linux, build_windows, build_macos]
 
         steps:
-          - name: Create zip file
-            run: |
-              mkdir build
-              cp -r build_linux build/linux
-              cp -r build_windows build/windows
-              cp -r build_macos build/macos
-              zip -r build.zip build
           - name: Upload artifacts
             uses: actions/upload-artifact@v2
             with:
-                name: build-artifacts
+                name: exported-artifacts
                 path: build
