--- a/.github/workflows/cmake-build-all.yml
+++ b/.github/workflows/cmake-build-all.yml
@@ -43,10 +43,10 @@ jobs:
             uses: microsoft/setup-msbuild@v1
 
           - name: Configure CMake
-            run: cmake -B build_windows -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -G "Visual Studio 16 2019"
+            run: cmake -B build_windows -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 16 2019"
 
           - name: Build project
-            run: cmake --build build_windows --config ${BUILD_TYPE}
+            run: cmake --build build_windows --config Release
 
           - name: Move artifacts to build folder
             run: mv build_windows/* build
