--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,8 @@ set(CMAKE_C_STANDARD 11)
 
 add_executable(Projeto main.c
         src/visual.c
-        src/produtos.c)
+        src/produtos.c
+        src/iohelp.c)
 
 if(NOT CMAKE_BUILD_TYPE)
     set(CMAKE_BUILD_TYPE Debug)
