--- a/.github/workflows/cmake-build-all.yml
+++ b/.github/workflows/cmake-build-all.yml
@@ -26,6 +26,12 @@ jobs:
           - name: Build project
             run: cmake --build build_linux --config ${BUILD_TYPE}
 
+          - name: Export build artifacts
+            uses: actions/upload-artifact@v2
+            with:
+              name: build_linux
+              path: build_linux
+
     build_windows:
         runs-on: windows-2019
 
@@ -45,6 +51,12 @@ jobs:
           - name: Build project
             run: cmake --build build_windows --config Release
 
+          - name: Export build artifacts
+            uses: actions/upload-artifact@v2
+            with:
+              name: build_windows
+              path: build_windows
+
     build_macos:
         runs-on: macos-latest
 
@@ -61,20 +73,8 @@ jobs:
           - name: Build project
             run: cmake --build build_macos --config ${BUILD_TYPE}
 
-    export_artifacts:
-        runs-on: ubuntu-latest
-
-        needs: [build_linux, build_windows, build_macos]
-
-        steps:
-          - name: Move built executables to export folder
-            run: |
-                mkdir -p build
-                cp build_linux/* build/
-                cp build_windows/* build/
-                cp build_macos/* build/
-          - name: Upload artifacts
+          - name: Export build artifacts
             uses: actions/upload-artifact@v2
             with:
-                name: exported-artifacts
-                path: build
+              name: build_macos
+              path: build_macos
