--- a/.github/workflows/cmake-build-all.yml
+++ b/.github/workflows/cmake-build-all.yml
@@ -10,71 +10,80 @@ env:
   BUILD_TYPE: Release
 
 jobs:
-    build_linux:
-        runs-on: ubuntu-latest
+  build_linux:
+    runs-on: ubuntu-latest
 
-        steps:
-          - name: Checkout the repo
-            uses: actions/checkout@v3
-            with:
-              persist-credentials: false
-              ref: ${{ github.event.inputs.checkoutRef }}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          ref: ${{ github.event.inputs.checkoutRef }}
 
-          - name: Configure CMake
-            run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+      - name: Install Qt6
+        run: sudo apt-get install qt6-default
 
-          - name: Build project
-            run: cmake --build build_linux --config ${BUILD_TYPE}
+      - name: Configure CMake
+        run: cmake -B build_linux -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
 
-          - name: Export build artifacts
-            uses: actions/upload-artifact@v2
-            with:
-              name: build_linux
-              path: build_linux
+      - name: Build project
+        run: cmake --build build_linux --config ${BUILD_TYPE}
 
-    build_windows:
-        runs-on: windows-2019
+      - name: Export build artifacts
+        uses: actions/upload-artifact@v2
+        with:
+          name: build_linux
+          path: build_linux
 
-        steps:
-          - name: Checkout the repo
-            uses: actions/checkout@v3
-            with:
-              persist-credentials: false
-              ref: ${{ github.event.inputs.checkoutRef }}
+  build_windows:
+    runs-on: windows-2019
 
-          - name: Set up CMake
-            uses: microsoft/setup-msbuild@v1
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          ref: ${{ github.event.inputs.checkoutRef }}
 
-          - name: Configure CMake
-            run: cmake -B build_windows -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 16 2019"
+      - name: Set up MSBuild
+        uses: microsoft/setup-msbuild@v2
 
-          - name: Build project
-            run: cmake --build build_windows --config Release
+      - name: Install Qt6
+        run: choco install qt6 --params '"/NoDesktopShortcut /NoStartMenuShortcut"'
 
-          - name: Export build artifacts
-            uses: actions/upload-artifact@v2
-            with:
-              name: build_windows
-              path: build_windows
+      - name: Configure CMake
+        run: cmake -B build_windows -DCMAKE_BUILD_TYPE=Release -G "Visual Studio 16 2019"
 
-    build_macos:
-        runs-on: macos-latest
+      - name: Build project
+        run: cmake --build build_windows --config Release
 
-        steps:
-          - name: Checkout the repo
-            uses: actions/checkout@v3
-            with:
-              persist-credentials: false
-              ref: ${{ github.event.inputs.checkoutRef }}
+      - name: Export build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build_windows
+          path: build_windows
 
-          - name: Configure CMake
-            run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+  build_macos:
+    runs-on: macos-latest
 
-          - name: Build project
-            run: cmake --build build_macos --config ${BUILD_TYPE}
+    steps:
+      - name: Checkout the repo
+        uses: actions/checkout@v4
+        with:
+          persist-credentials: false
+          ref: ${{ github.event.inputs.checkoutRef }}
 
-          - name: Export build artifacts
-            uses: actions/upload-artifact@v2
-            with:
-              name: build_macos
-              path: build_macos
+      - name: Install Qt6
+        run: brew install qt@6
+
+      - name: Configure CMake
+        run: cmake -B build_macos -S . -DCMAKE_BUILD_TYPE=${BUILD_TYPE}
+
+      - name: Build project
+        run: cmake --build build_macos --config ${BUILD_TYPE}
+
+      - name: Export build artifacts
+        uses: actions/upload-artifact@v4
+        with:
+          name: build_macos
+          path: build_macos
