Versão :skull: - Adicionada funcionalidade geral a stock

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -34,9 +34,8 @@ add_executable(Projeto src/main.c
         src/gui/mainmenu.h
         src/operacoes.c
         src/operacoes.h
-        src/stacks.c
-        src/stacks.h
-        src/stacks.h
+        src/gui/MenuDialog.cpp
+        src/gui/MenuDialog.h
 )
 
 message("-- Linking Qt6")
